# kreate

./: .gitignore  CMakeLists.txt  README  README.md  dmesg.txt  qml.qrc  resources.qrc
qrc:/ui/: theme.colors
src/: main.cpp
src/backend/: colorschemebuilder.cpp  colorschemebuilder.h  metadatawriter.cpp  metadatawriter.h  packagewriter.cpp  packagewriter.h  themeinstaller.cpp  themeinstaller.h  validator.cpp  validator.h
src/core/: ColorSchemeBuilder.cpp  ColorSchemeBuilder.h  WallpaperAnalyzer.cpp  WallpaperAnalyzer.h
src/io/: ThemeWriter.cpp  ThemeWriter.h  WallpaperLoader.cpp  WallpaperLoader.h
src/palette/: PaletteGenerator.cpp  PaletteGenerator.h
src/ui/qml/: ColorEditor.qml  ExportPage.qml  OverviewPage.qml  ThemePreview.qml  main.qml
ui/: ExportPage.qml  ExportPage.qml.bak  MainPage.qml  MainPage.qml.bak  main.qml
